# oakley

./: .gitignore  Cargo.toml  Makefile  README.md  declaration.md  oakley.db
.cursor/rules/: github.mdc  openai-api.mdc
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/oakley-cli/: Cargo.toml
crates/oakley-cli/src/: main.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
tauri-app/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
tauri-app/src/: App.tsx  index.css  main.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: CardList.tsx  CardPreview.tsx
