[package]
name = "capture"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
image = { version = "0.24", default-features = false, features = ["png"] }
tempfile = "3"

# Optional for full feature
[dependencies.rdev]
workspace = true
optional = true

[dependencies.screenshots]
workspace = true
optional = true

[features]
# default stub; enable 'full' to use real input stack
full = ["rdev", "screenshots"] 