[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
image = { version = "0.24", default-features = false, features = ["png"] }

# Disable real leptess for now
leptess = { workspace = true, optional = true }

[features]
# Full OCR uses Tesseract via the leptess crate
full = ["leptess"] 