[package]
name = "oakley-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [ "api-all", "macos-private-api"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
# Oakley internal crates
capture = { path = "../../crates/capture", features = ["full"] }
ocr = { path = "../../crates/ocr", features = ["full"] }
llm = { path = "../../crates/llm", features = ["full"] }
data = { path = "../../crates/data" }
scheduler = { path = "../../crates/scheduler" }
utils = { path = "../../crates/utils" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
